# COMP371-Project

./: .gitignore  CMakeLists.txt  COMP371Assignment.cpp  OIFace.cpp  OINullDFaceTracker.cpp  OINullDFaceTracker.hpp  OINullFaceTracker.cpp  OINullFaceTracker.hpp  README.md
assets/shaders/: shader_fragment.glsl  shader_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  textured_fragment.glsl  textured_vertex.glsl
dependency/include/: CMakeLists.txt  Config.h.in  OIAligner.hpp  OIClassifier.hpp  OIDataFrame.hpp  OIDepthFrame.hpp  OIDetector.hpp  OIDevice.hpp  OIEnum.hpp  OIFaceAdapter.hpp  OIFaceEnums.hpp  OIFrame.hpp  OIGesture.hpp  OIGestureData.hpp  OIGestureEnums.hpp  OIGestureTracker.hpp  OIGestureType.hpp  OIHandData.hpp  OINullDevice.hpp  OINullGestureTracker.hpp  OINullSkeletonTracker.hpp  OISkeleton.hpp  OISkeletonEnums.hpp  OISkeletonTracker.hpp  OIState.hpp  OIStatus.hpp  OITools.hpp  OITracker.hpp  OIType.hpp  OIUser.hpp  OIUtils.hpp  OIViewer.hpp  OpenISS.hpp
dependency/include/adapters/: OIFrameCVImpl.hpp  OIKinect.hpp  OIKinectAzure.hpp  OINiTEGestureTracker.hpp  OINiTESkeletonTracker.hpp  OINuiTrackGestureTracker.hpp  OIOpenFaceAdapter.hpp  OIPythonEnv.hpp  OIROSNiTEGestureAdapter.hpp  OIROSNuiTrackGestureAdapter.hpp  OIROSSkeletonAdapter.hpp  OIRealSenseD435.hpp  OIStructure.hpp
dependency/include/classifiers/: FER2D.hpp  FER3D.hpp  OIJavaClassifier.hpp  OIPythonClassifier.hpp  OIYoloDetector.hpp  ReIDer.hpp
include/: shaderloader.h
openiss_core/: OIFace.cpp  OIFaceAdapterFactory.cpp  OINullDFaceTracker.cpp  OINullFaceTracker.cpp
openiss_include/: OIFace.hpp  OINullFaceTracker.hpp
src/: COMP371Assignment.cpp  README.md  lab04.cpp
src/temp/: Sam'sFinalProject.cpp  lab04.cpp
